--- a/core/templates/core/create_cv.html
+++ b/core/templates/core/create_cv.html
@@ -210,6 +210,25 @@
             </form>
 
             <br/>
+            <h1 class="card">Add Certificates</h1>
+            <form class="form_cer" method="POST">
+                {% csrf_token %} 
+            <div id="wrapper_cer"></div>
+            <br/>
+            <div class="row">
+                <div class="col-md-1">
+                   <button id="cer_save" class="btn btn-primary">Save</button>
+                </div>
+
+                <div class="col-md-1">
+                   <button id="cer_add" class="btn btn-success">Add Form</button>
+                </div>
+            </div>
+            </form>
+            <br/>
+
+            
+            
 
             <h1 class="card">Add Referees Information</h1>
               
